--- a/index.html
+++ b/index.html
@@ -339,6 +339,11 @@
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/guitaicico" target="_blank">
+                  <i class="fa fa-whatsapp"></i>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
